--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Tämä on minun Githubissa oleva sivu</h1>
-<p>Meinasi loppu usko kesken :)</p>
+<p>Meinasi loppua usko kesken :)</p>
 
 </body>
 </html>
